<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.kuali.kra</groupId>
  <artifactId>kc_custom</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>kc_custom</name>
  <url>http://maven.apache.org</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
 
    <dependency>
       <groupId>org.kuali.kra</groupId>
       <artifactId>kc_project</artifactId>
       <type>war</type>
       <version>2.0</version>
	</dependency>
  </dependencies>
  
<build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <overlays>          
            <overlay>
   <groupId>org.kuali.kra</groupId>
  <artifactId>kc_project</artifactId>
             </overlay>
          </overlays>
        </configuration>
       </plugin>
    </plugins>
  </build>

<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<testResources>
					<testResource>
						<filtering>true</filtering>
						<directory>${basedir}/src/test/resources</directory>
						<includes>
							<include>META-INF/kc-test-config.xml</include>
							<include>log4j.properties</include>
						</includes>
					</testResource>
					<testResource>
						<directory>${basedir}/src/test/resources</directory>
						<excludes>
							<exclude>kc-test-config.xml</exclude> 
						</excludes>
					</testResource>
				</testResources>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>2.0</version>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.3.1</version>
						<configuration>
							<useFile>false</useFile>
							<testFailureIgnore>false</testFailureIgnore>
							<includes>
								<include>**/*Test.java</include>
							</includes>
 							<excludes><exclude></exclude></excludes>
							<forkMode>never</forkMode>
							<reportFormat>plain</reportFormat>
							<argLine>-Xmx1536m -XX:MaxPermSize=512m</argLine>
						</configuration>
					</plugin>
					<plugin>
    					<artifactId>maven-resources-plugin</artifactId>
    					<version>2.2</version>
					</plugin>
					<!-- 
					<plugin>
        				<groupId>org.codehaus.mojo</groupId>
        				<artifactId>cobertura-maven-plugin</artifactId>
					</plugin>
					 -->
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
					<version>2.9.1</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.rice</groupId>
					<artifactId>rice-kns</artifactId>
					<version>1.0.2</version>
					<exclusions>
						<exclusion>
							<groupId>itext</groupId>
							<artifactId>itext</artifactId>
						</exclusion>
						<exclusion>
							<groupId>xml-security</groupId>
							<artifactId>xmlsec</artifactId>
						</exclusion>
						<exclusion>
							<groupId>javax.servlet</groupId>
							<artifactId>servlet-api</artifactId>
						</exclusion>
					</exclusions>
				</dependency>

	<dependency>
       <groupId>org.kuali.kra</groupId>
       <artifactId>kc_project</artifactId>
       <type>jar</type>
       <version>2.0</version>
       <scope>provided</scope>
	</dependency>

				<dependency>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
					<version>2.4</version>
				</dependency>
				<dependency>
    				<groupId>org.apache.santuario</groupId>
    				<artifactId>xmlsec</artifactId>
    				<version>1.4.2</version>
    			</dependency>
				<dependency>
					<groupId>htmlunit</groupId>
					<artifactId>htmlunit</artifactId>
					<version>1.13</version>
					<exclusions>
						<exclusion>
							<artifactId>servlet-api</artifactId>
							<groupId>javax.servlet</groupId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.apache.xmlgraphics</groupId>
					<artifactId>fop</artifactId>
					<version>0.93</version>
				</dependency>
				<dependency>
					<groupId>avalon-framework</groupId>
					<artifactId>avalon-framework</artifactId>
					<version>4.1.2</version>
				</dependency>
				<dependency>
					<groupId>batik</groupId>
					<artifactId>batik</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>com.lowagie</groupId>
					<artifactId>itext</artifactId>
					<version>2.1.2</version>
				</dependency>
				<dependency>
  					<groupId>junit</groupId>
  					<artifactId>junit</artifactId>
  					<version>4.7</version>
  					<scope>test</scope>
				</dependency>

				<dependency>
  					<groupId>org.jmock</groupId>
  					<artifactId>jmock-junit4</artifactId>
  					<version>2.5.0</version>
  					<scope>test</scope>
				</dependency>
				<dependency>
  					<groupId>jmock</groupId>
  					<artifactId>jmock</artifactId>
  					<version>1.0.1</version>
  					<scope>test</scope>
				</dependency>
				<dependency>
  					<groupId>org.jmock</groupId>
  					<artifactId>jmock-legacy</artifactId>
  					<version>2.5.0</version>
  					<scope>test</scope>
				</dependency>
				<dependency>
  					<groupId>org.objenesis</groupId>
  					<artifactId>objenesis</artifactId>
  					<version>1.0</version>
  					<scope>test</scope>
				</dependency>	
				<dependency>
					<groupId>com.oracle</groupId>
					<artifactId>ojdbc14</artifactId>
					<version>10.2.0.3.0</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>mysql</groupId>
					<artifactId>mysql-connector-java</artifactId>
					<version>5.1.5</version>
					<scope>provided</scope>
				</dependency>			
				<dependency>
                    <groupId>atomikos</groupId>
                    <artifactId>transactions</artifactId>
                    <version>3.2.1</version>
                </dependency>
                <dependency>
                	<groupId>commons-io</groupId>
                	<artifactId>commons-io</artifactId>
                	<version>1.4</version>
            	</dependency>
		    	<dependency>
		      		<groupId>org.drools</groupId>
		      		<artifactId>drools-core</artifactId>
		      		<version>4.0.7</version>
		    	</dependency>                 
		    	<dependency>
					<groupId>org.drools</groupId>
					<artifactId>drools-decisiontables</artifactId>
					<version>4.0.7</version>					 
		      		<exclusions>
                       <exclusion>
                         <groupId>org.eclipse.jdt</groupId>
                         <artifactId>core</artifactId>
		      		   </exclusion>
                    </exclusions>
				</dependency>
                <dependency>
    				<groupId>org.codehaus.mojo</groupId>
    				<artifactId>xmlbeans-maven-plugin</artifactId>
    				<version>2.3.2</version>
				</dependency>
                <dependency>                   
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>gg-application</artifactId>                    
                	<version>1.0-SNAPSHOT</version>              
                </dependency>
				<dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>gg-system</artifactId>                    
                	<version>1.0-SNAPSHOT</version>                
                </dependency>
                                
                <dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>      
                	<artifactId>gg-forms1</artifactId>                    
                	<version>1.0-SNAPSHOT</version>                
                </dependency>
                <dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>gg-forms2</artifactId>                    
                	<version>1.0-SNAPSHOT</version>                
                </dependency>
                <dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>kc-printing-xsds</artifactId>                    
                	<version>0.9.4-SNAPSHOT</version>                
                </dependency>
                <dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>gg-forms3</artifactId>                    
                	<version>1.0-SNAPSHOT</version>                
                </dependency>
                <dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>gg-forms4</artifactId>             
                	<version>1.0-SNAPSHOT</version>                
                </dependency>
                <dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>gg-forms5</artifactId>             
                	<version>1.0-SNAPSHOT</version>                
                </dependency>
                <dependency>                    
                	<groupId>org.kuali.kra.s2s</groupId>                    
                	<artifactId>kc-s2s-generated</artifactId>             
                	<version>1.0-SNAPSHOT</version>                
                </dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-transports-http-jetty</artifactId>
					<version>${cxf.version}</version>
					<exclusions>
						<exclusion><!-- avoids conflict with javamail -->
							<groupId>org.apache.geronimo.specs</groupId>
							<artifactId>geronimo-javamail_1.4_spec</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-frontend-jaxws</artifactId>
					<version>${cxf.version}</version>
				     <exclusions>
					<exclusion><!-- avoids conflict with javamail -->
							<groupId>org.apache.geronimo.specs</groupId>
							<artifactId>geronimo-javamail_1.4_spec</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-frontend-simple</artifactId>
					<version>${cxf.version}</version>
				</dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-transports-http</artifactId>
					<version>${cxf.version}</version>
					<exclusions>
						<exclusion><!-- avoids conflict with javamail -->
							<groupId>org.apache.geronimo.specs</groupId>
							<artifactId>geronimo-javamail_1.4_spec</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-ws-security</artifactId>
					<version>${cxf.version}</version>
				</dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-databinding-aegis</artifactId>
					<version>${cxf.version}</version>
				</dependency>
				<dependency>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-rt-databinding-jaxb</artifactId>
					<version>${cxf.version}</version>
					<exclusions>
						<exclusion><!-- avoids conflict with javamail -->
							<groupId>org.apache.geronimo.specs</groupId>
							<artifactId>geronimo-javamail_1.4_spec</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				
			</dependencies>
		</profile>
</profiles>

  	<properties>
  		<servlet-api.version>2.4</servlet-api.version>
		<cxf.version>2.1.7</cxf.version>
		<!-- Checkstyle config -->
		<checkstyle.config.location>${basedir}/src/main/config/KC_Checkstyle.xml</checkstyle.config.location>
		<checkstyle.enable.rss>false</checkstyle.enable.rss>
		<checkstyle.enable.rules.summary>false</checkstyle.enable.rules.summary>
		<version.maven-checkstyle-plugin>2.4-SNAPSHOT</version.maven-checkstyle-plugin>
	</properties>
</project>
